[FIX] website: prevent button to flicker in navbar
The navbar may now have static content which can be on the right of the
menu items. Like for the default navbar which has a button on the right.
When they are a lot of menu items, the static content is shrinked...
before the auto-hide extra menus feature is done. This flickering can
be reduced by forcing the navbar buttons to stay on one line.

Part of https://github.com/odoo/odoo/pull/59136

X-original-commit: 5c9d28ac9a1307e5786f0909d5135e82f420274d

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -189,6 +189,12 @@ $-seen-urls: ();
     .nav-item {
         transition: opacity 1000ms ease 0s;
     }
+    .btn {
+        // This was a default bootstrap style before but it was removed from
+        // the library at some point. It seems important in the header so that
+        // the header does not flicker during loading.
+        white-space: nowrap;
+    }
     .o_menu_loading .nav-item {
         height: 0 !important;
         overflow: hidden !important;
